<resources>
    <string name="app_name">Nexus Backup</string>
    <string name="login_title">Connect to Project Nexus</string>
    <string name="server_url_hint">Server URL (e.g. http://192.168.1.10:8080)</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="mfa_hint">6-digit verification code</string>
    <string name="login_button">Sign in</string>
    <string name="backup_now">Backup now</string>
    <string name="uploaded_count">Uploaded this run: %1$d</string>
    <string name="last_backup">Last backup: %1$s</string>
    <string name="last_error">Last error: %1$s</string>
    <string name="status_unknown">Unknown</string>
</resources>
